--- a/AnalizaInternetArtifakata/AnalizaInternetArtifakata.csproj
+++ b/AnalizaInternetArtifakata/AnalizaInternetArtifakata.csproj
@@ -68,6 +68,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UrlHistoryLibrary, Version=1.0.6396.38898, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\dlls\UrlHistoryLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
